client/static/styles/main.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

/* #### Generated By: http://www.cufonfonts.com #### */

@font-face {
  font-family: 'OCR A Std';
  font-style: normal;
  font-weight: normal;
  src: local('OCR A Std'), url('/static/fonts/OCRAStd.woff') format('woff');
}

:root {
  scroll-behavior: smooth;
}

body {
  font-family: 'Raleway', sans-serif;
} 

.mobile-width {
  width: 100%;
  max-width: 740px;
}

.hidden-all {
  display: none;
}

.hidden-visually {
  position: absolute;
  width: 1px;
  height: 1px;
  padding: 0;
  overflow: hidden;
  clip: rect(0,0,0,0);
  white-space: nowrap;
  -webkit-clip-path: inset(50%);
  clip-path: inset(50%);
  border: 0;
}

.text-emboss {
  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.2), 0px -1px 1px rgba(0, 0, 0, 0.2);
}

.section {
  background-attachment: fixed;
  background-size: cover;
  background-position: top left;
}

// #bio {
//   background-image: url(/static/img/background/music.jpg);

//   @screen xs { 
//     background-image: url(/static/img/background/music-xs.jpg);
//   }

//   @screen sm { 
//     background-image: url(/static/img/background/music-sm.jpg);
//   }

//   @screen md { 
//     background-image: url(/static/img/background/music-md.jpg);
//   }

//   @screen lg { 
//     background-image: url(/static/img/background/music-lg.jpg);
//   }
  
//   @screen xl { 
//     background-image: url(/static/img/background/music-xl.jpg);
//   }
  
//   @screen 2xl { 
//     background-image: url(/static/img/background/music-2xl.jpg);
//   }
// }

// #contact {
//   background-image: url(/static/img/background/cables.jpg);

//   @screen xs { 
//     background-image: url(/static/img/background/cables-xs.jpg);
//   }

//   @screen sm { 
//     background-image: url(/static/img/background/cables-sm.jpg);
//   }

//   @screen md { 
//     background-image: url(/static/img/background/cables-md.jpg);
//   }

//   @screen lg { 
//     background-image: url(/static/img/background/cables-lg.jpg);
//   }
  
//   @screen xl { 
//     background-image: url(/static/img/background/cables-xl.jpg);
//   }
  
//   @screen 2xl { 
//     background-image: url(/static/img/background/cables-2xl.jpg);
//   }
// }

#portfolio {
  background-image: url(/static/img/background/code-2xl.jpg);

  @screen xs { 
    // background-image: url(/static/img/background/code-2xl.jpg);
  }

  @screen sm { 
    // background-image: url(/static/img/code5.jpg);
  }

  @screen md { 
    // background-image: url(/static/img/code5.jpg);
  }

  @screen lg { 
    // background-image: url(/static/img/code5.jpg);
  }
  
  @screen xl { 
    // background-image: url(/static/img/code5.jpg);
  }
  
  @screen 2xl { 
    // background-image: url(/static/img/background/code-2xl-dark.jpg);
  }
}

#cv {
  background-image: url(/static/img/background/circuit-2xl-dark.jpg);

  @screen xs { 
    // background-image: url(/static/img/background/circuit-xs.jpg);
  }

  @screen sm { 
    // background-image: url(/static/img/background/circuit-sm.jpg);
  }

  @screen md { 
    // background-image: url(/static/img/background/circuit-md.jpg);
  }

  @screen lg { 
    // background-image: url(/static/img/background/circuit-lg.jpg);
  }
  
  @screen xl { 
    // background-image: url(/static/img/background/circuit-xl.jpg);
  }
  
  @screen 2xl { 
    // background-image: url(/static/img/background/circuit-2xl-dark.jpg);
  }
}

.box-right {
  position: relative;
}

.box-right::after {
  content: "";
  @apply absolute bg-white w-1 h-8 -bottom-8;
}

.glow-white {
  box-shadow: 
    0 0 1px 0 rgba(255, 255, 255, 0.3),
    inset 0 0 1px 0 rgba(255, 255, 255, 0.3);
}

.w-header {
  width: 20rem;

  @screen xs {
    width: 25rem;
  }

  @screen sm {
    width: 36rem;
  }
}

.notransition {
  -webkit-transition: none !important;
  -moz-transition: none !important;
  -o-transition: none !important;
  transition: none !important;
}

.image-gallery {
  --splay: 30deg / var(--no-images);
}

.image {
  position: absolute;
  top: 0;
  z-index: calc(var(--no-images) - 1 - var(--index));
  transform-origin: 80% 80%;
  transition: transform 0.25s 0.05s ease-in-out, filter 0.05s ease-in-out;
  transform: rotate(calc(var(--index) * var(--splay)));
  filter: brightness(0.9);
}

.image:hover {
  transform: translateX(1rem) translateY(-3rem) rotate(calc(var(--index) * var(--splay)));
  filter: brightness(1);
}

.image-current {
  transform: rotate(calc(var(--index) * var(--splay)));
  filter: brightness(1);
}

.image-current:hover {
  transform: rotate(calc(var(--index) * var(--splay)));
}

.image-gallery.fullscreen {
  .image-current {
    @apply fixed z-50 left-0 top-0 w-screen h-screen bg-black bg-opacity-70 flex flex-col justify-center items-center;

    img {
      @apply object-contain max-h-full max-w-full;
    }

    #fullscreen-close {
      @apply block;
    }
  }
}

/*
#menu {
  &::before {
    position: absolute;
    top: 6px;
    left: 6px;
    background: none;
    padding: 2px 5px;
    content: "-";
    @media (min-width: 500px) { content: "XS"; @apply bg-red-200; }
    @media (min-width: 640px) { content: "SM"; @apply bg-orange-200; }
    @media (min-width: 768px) { content: "MD"; @apply bg-yellow-200; }
    @media (min-width: 1024px) { content: "LG"; @apply bg-green-200; }
    @media (min-width: 1280px) { content: "XL"; @apply bg-blue-200; }
    @media (min-width: 1536px) { content: "2XL"; @apply bg-purple-200; }
  }
}
*/

.fade-out {
  @apply relative h-12 overflow-hidden;
}

.fade-out::after {
  content: "";
  @apply absolute inset-0 bg-gradient-to-t from-yellow-100 pointer-events-none;
}

:root {
  --text-shadow-color: black;
}

.text-shadow-lg {
  text-shadow: 0px 0px 10px var(--text-shadow-color);
}

.text-shadow-blue-600 {
  --text-shadow-color: rgb(37, 99, 235);
}

.text-shadow {
  text-shadow: 0px 0px 3px var(--text-shadow-color);
}

.font-pcb {
  font-family:'OCR A Std';
  // font-size: 0.75rem;
}

// .text-sideways {
//   writing-mode: vertical-rl;
//   text-orientation: sideways;
// }

.pill {
  @apply mt-2 mr-2 px-1 py-0.5 whitespace-nowrap text-gray-700 bg-gray-50 border border-gray-300 shadow-sm;

  svg {
    @apply inline h-4 w-4 mr-1 relative -top-px;
  }
}

.pill-dark {
  @apply mt-2 mr-2 px-1 py-0.5 whitespace-nowrap border border-gray-900 shadow bg-gray-700 text-gray-200;

  svg {
    @apply inline h-5 w-5 mr-1 rounded-sm relative -top-px;
  }
}

p .pill,
p .pill-dark {
  @apply mx-0;
}

.pcb-ring {
  @apply p-1 rounded-full shadow shadow-inner;
  background: #c2d7c0;
  border-top: 1px solid white;
  border-bottom: 1px solid #a0b29e;
  border-left: 1px solid #c2d7c0;
  border-right: 1px solid #c2d7c0;

  &::after {
    content: "";
    @apply block relative w-3 h-3 bg-gray-700 rounded-full;
    border-top: 1px solid #a0b29e;
    border-bottom: 1px solid white;
    border-left: 1px solid #c2d7c0; 
    border-right: 1px solid #c2d7c0;  
  }
}

.bg-pcb-lightgreen {
  background: #8db883;
}

.pcb-trace {
  transform: skew(calc(var(--skew) * -1deg));
}

.pcb-trace.pcb-trace-reverse {
  transform: skew(calc(var(--skew) * 1deg));
}

